--- a/index14-using2.html
+++ b/index14-using2.html
@@ -18,8 +18,8 @@
 
 <script src="https://cdn.jsdelivr.net/npm/web3@4.8.0/dist/web3.min.js"></script>
 <script>
-    const zeroAddress = "0x36C02dA8a0983159322a80FFE9F24b1acfF8B570";
-    const bankAddress = "0x809d550fca64d94Bd9F66E60752A544199cfAC3D"; // Replace with the new Bank address after redeployment
+    const TOKEN_ADDRESS = '0x5FbDB2315678afecb367f032d93F642f64180aa3';
+    const BANK_ADDRESS = '0xe7f1725E7734CE288F8367e1Bb143E90bb3F0512';
 
     const zeroAbi = [
         { "constant": false, "inputs": [{ "name": "spender", "type": "address" }, { "name": "amount", "type": "uint256" }], "name": "approve", "outputs": [{ "name": "", "type": "bool" }], "type": "function" },
